# sand

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Datapacks.md  LICENSE  Milestones.md  README.md  RELEASE.md  ROADMAP.md  Sand.toml  book.toml  llms.txt  main.sand  mc-commands.md  test.sand
ai/: README.md  (+5 more)
examples/arcane_pack/: Cargo.toml  build.rs  sand.toml
examples/arcane_pack/src/: events.rs  lib.rs
examples/book_project/: Cargo.toml  build.rs  sand.toml
examples/book_project/src/: lib.rs
examples/participant_audit/: Cargo.toml  build.rs  sand.toml
examples/participant_audit/src/: lib.rs
examples/participant_audit/tests/: deterministic_export.rs
sand/: Cargo.toml
sand-build/: Cargo.toml
sand-build/src/: cache.rs  download.rs  error.rs  lib.rs  manifest.rs  registry_fixture.rs  report.rs
sand-build/src/codegen/: blocks.rs  commands.rs  mod.rs  registries.rs
sand-build/tests/: integration.rs
sand-cli/: Cargo.toml  build.rs
sand-cli/benches/: build_pipeline.rs
sand-cli/src/: add_cmd.rs  config.rs  lib.rs  main.rs  pack_format.rs  run_cmd.rs  scaffold.rs
sand-cli/src/console/: classify.rs  correlate.rs  dedup.rs  diagnostic.rs  health.rs  mod.rs  phase.rs  process.rs  render.rs
sand-cli/tests/: cli_new_user_journey.rs  console_fixture_pipeline.rs
sand-commands/: Cargo.toml
sand-commands/src/: blocks.rs  builtins.rs  coord.rs  display.rs  error.rs  execute.rs  execute_args.rs  execute_ir.rs  inventory.rs  lib.rs  nbt.rs  particles.rs  raw.rs  render.rs  scoreboard.rs  selector.rs  sound.rs  text.rs  validate.rs
sand-commands/tests/: canonical_26_2_commands.rs
sand-components/: Cargo.toml
sand-components/fixtures/registry-coverage/: 1.21.4.json  26.2.json
sand-components/fixtures/trigger-coverage/: 1.21.4.json  26.2.json
sand-components/src/: component.rs  effect.rs  error.rs  lib.rs  predicates.rs  raw.rs  registry.rs  registry_coverage.rs  resource_location.rs  structure_template.rs  validation.rs
sand-components/src/advancement/: mod.rs  trigger_coverage.rs
sand-components/src/banner_pattern/: mod.rs
sand-components/src/chat_type/: mod.rs
sand-components/src/damage_type/: mod.rs
sand-components/src/dialog/: mod.rs
sand-components/src/enchantment/: mod.rs
sand-components/src/instrument/: mod.rs
sand-components/src/item/: definition.rs  matcher.rs  mod.rs  predicates.rs  stack.rs
sand-components/src/item_modifier/: mod.rs
sand-components/src/jukebox_song/: mod.rs
sand-components/src/loot_table/: mod.rs  validation.rs
sand-components/src/painting_variant/: mod.rs
sand-components/src/predicate/: mod.rs
sand-components/src/recipe/: cooking.rs  mod.rs  shaped.rs  shapeless.rs  smithing.rs  stonecutting.rs  types.rs
sand-components/src/tag/: mod.rs
sand-components/src/trim/: mod.rs
sand-components/src/wolf_variant/: mod.rs
sand-components/tests/: canonical_26_2_components.rs
sand-core/: Cargo.toml  build.rs
sand-core/examples/: automatic_state.rs  enchanted_items.rs  spell_system.rs  vfx_system.rs
sand-core/src/: advanced.rs  compat.rs  component.rs  condition.rs  custom_item_ext.rs  error.rs  event.rs  execute_when.rs  function.rs  lib.rs  mc_version.rs  prelude.rs  resource_location.rs  resource_ref.rs  transition.rs  version.rs  vfx.rs
sand-core/tests/: advancement_version_export.rs  armor_watch_export.rs  auto_state_conflict.rs  auto_state_lifecycle.rs  custom_advancement_participant_setup.rs  custom_item_components.rs  dialog_callback_export.rs  effect_api.rs  entity_query_context.rs  event_branch_export.rs  event_chain_advancement_bridge_nested_siblings.rs  event_chain_advancement_parent_after_any_rejected.rs  event_chain_advancement_parent_combined_occurrence_rejected.rs  event_chain_advancement_parent_composition.rs  event_chain_advancement_parent_direct_handler_rejected.rs  event_chain_advancement_parent_rejected.rs  event_chain_advancement_parent_setup_mixed_rejected.rs  event_chain_advancement_parent_setup_objectives_rejected.rs  event_chain_advancement_parent_setup_post_observation_rejected.rs  event_chain_advancement_parent_setup_pre_observation_rejected.rs  event_chain_advancement_parent_within_rejected.rs  event_chain_child_lifecycle.rs  event_chain_cycle.rs  event_chain_export.rs  event_chain_identity_collision.rs  event_chain_legacy_tick_condition_parent.rs  event_chain_participant_inheritance.rs  event_chain_participant_inheritance_diag_after_any.rs  event_chain_participant_inheritance_diag_transitive.rs  event_chain_participant_inheritance_diag_within.rs  event_chain_participant_item_inheritance.rs  event_chain_while_export.rs  event_chain_while_provider_reuse.rs  event_chain_within_export.rs  event_multi_parent_export.rs  event_multi_parent_occurrence_collision.rs  exporter_dyn_fn_determinism.rs  invalid_loot_export.rs  item_snapshot_tick_capture_export.rs  missing_participant_diagnostic.rs  (+12 more)
sand-example/: Cargo.toml  build.rs  sand.toml
sand-example/src/: arcane_golden.rs  attribute_golden.rs  enhanced_cells.rs  gameplay_state_example.rs  join_example.rs  level_up_reward.rs  lib.rs  participant_context_example.rs  player_state_transitions_example.rs  state_ergonomics.rs  tracked_sneaking_example.rs
sand-example/tests/: export_version_transport.rs  participant_context_export.rs  player_state_transitions_export.rs  tracked_transition_export.rs
sand-macros/: Cargo.toml
sand-macros/src/: lib.rs
sand-macros/tests/: compile_tests.rs
sand-resourcepack/: Cargo.toml
sand-resourcepack/src/: component.rs  descriptor.rs  export.rs  gen_.rs  handle.rs  layout.rs  lib.rs  pack_format.rs  sprite.rs  stat.rs  unicode.rs
sand-vanilla-audit/: Cargo.toml  build.rs  sand.toml
sand-vanilla-audit/src/: lib.rs
sand-version/: Cargo.toml
sand-version/src/: lib.rs
sand/benches/: build_pipeline.rs
sand/src/: add_cmd.rs  build_cmd.rs  config.rs  join_cmd.rs  lib.rs  main.rs  pack_format.rs  prelude.rs  run_cmd.rs  scaffold.rs
sand/tests/: api_signature_guard.rs  cli_new_user_journey.rs  example_imports.rs  facade.rs  prelude_sand_event_participants.rs
(+475 files in other folders)
