[workspace]
resolver = "3"
members = [
    "sand",
    "sand-cli",
    "sand-core",
    "sand-macros",
    "sand-build",
    "sand-example",
    "sand-vanilla-audit",
    "sand-resourcepack",
    "sand-commands",
    "sand-components",
    "sand-version",
]
exclude = ["examples/arcane_pack"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ThatOneToast/sand"
homepage = "https://github.com/ThatOneToast/sand"
authors = ["Toast <ThatOneToast@proton.me>"]
rust-version = "1.96.0"
