[workspace]
resolver = "3"
members = [
    "sand",
    "sand-cli",
    "sand-core",
    "sand-macros",
    "sand-build",
    "sand-example",
    "sand-resourcepack",
    "sand-commands",
    "sand-components",
    "sand-version",
]
# sand-vanilla-audit, like examples/arcane_pack and examples/book_project, is
# always built standalone (via `sand build` with cwd set to its directory),
# never through `cargo build --workspace`. Excluding it keeps its `sand_export`
# bin out of the shared target/ directory, which otherwise collides with
# sand-example's identically-named bin (both are dogfood/fixture crates using
# the same generated-binary convention).
exclude = ["examples/arcane_pack", "examples/book_project", "sand-vanilla-audit"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ThatOneToast/sand"
homepage = "https://github.com/ThatOneToast/sand"
authors = ["Toast <ThatOneToast@proton.me>"]
rust-version = "1.96.0"
