[package]
name = "sand-components"
description = "Typed JSON builders for every Minecraft 1.21.x datapack component type"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "components", "gamedev"]
categories = ["game-development", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sand-commands = { path = "../sand-commands" }
