[package]
name = "sand-core"
description = "Core types, traits, command builders, and datapack components for the Sand Minecraft datapack toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "commands", "gamedev"]
categories = ["game-development", "data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
inventory = "0.3"

[build-dependencies]
sand-build = { path = "../sand-build" }
