[package]
name = "sand-core"
description = "Core types, traits, command builders, and datapack components for the Sand Minecraft datapack toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "commands", "gamedev"]
categories = ["game-development", "data-structures"]

[features]
## Track recent player damage via the `minecraft.custom:minecraft.damage_taken` stat.
## Provides `DamageTracker`, `DamageThreshold`, and `recently_damaged` helpers. Cannot
## report exact per-event damage amounts (a vanilla datapack limitation); see the
## `systems::damage` module docs.
systems-damage = []

## Auto-generate scoreboard-tick commands for all `Cooldown` values registered via
## `systems::cooldowns::register`. Adds a tick-tag entry handled by the export pipeline.
systems-cooldowns = []

## Lifecycle helpers for join, death, and respawn — initializes registered player-data
## schemas on first join and re-initialises state on respawn.
systems-lifecycle = []

## Player-data schema bootstrap: registers data init functions for all `PlayerData` schemas.
systems-player-data = ["systems-lifecycle"]

## Typed movement helpers: push-away shockwave, launch upward, speed boost, slow.
## Emits pure-vanilla local-coordinate teleport and effect-give commands.
systems-movement = []

## Typed inventory helpers: has/replace/clear/give with ItemSlot everywhere.
systems-inventory = []

## Typed interactable entity builder (interaction entity + trigger wiring).
systems-entities = []

## Enable all optional systems.
systems-all = ["systems-damage", "systems-cooldowns", "systems-player-data", "systems-movement", "systems-inventory", "systems-entities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
inventory = "0.3"
sand-commands = { path = "../sand-commands" }
sand-components = { path = "../sand-components" }

[build-dependencies]
sand-build = { path = "../sand-build" }
