[package]
name = "sand-example"
description = "Example datapack and integration tests for the Sand toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "sand_export"
path = "src/bin/sand_export.rs"

[dependencies]
sand-core = { path = "../sand-core" }
sand-macros = { path = "../sand-macros" }
serde_json = "1"

[build-dependencies]
sand-build = { path = "../sand-build" }
