[package]
name = "sand-version"
description = "Shared Minecraft version anchors for the Sand datapack toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "version"]
categories = ["game-development"]

[dependencies]
