[package]
name = "sand"
description = "A Minecraft datapack toolkit for Rust — scaffold, build, and test datapacks with type-safe Rust code"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "cli", "gamedev", "toolkit"]
categories = ["command-line-utilities", "game-development"]

[dependencies]
sand-build = { path = "../sand-build" }
sand-components = { path = "../sand-components" }
sand-core = { path = "../sand-core" }
sand-resourcepack = { path = "../sand-resourcepack" }
clap = { version = "4", features = ["derive"] }
handlebars = "6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"
walkdir = "2"
colored = "2"
base64 = "0.22"

[features]
integration-tests = []

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "build_pipeline"
harness = false
