[package]
name = "sand"
description = "Write Minecraft datapacks in type-safe Rust — the Sand authoring library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
keywords = ["minecraft", "datapack", "gamedev", "toolkit"]
categories = ["game-development", "api-bindings"]

[dependencies]
sand-core = { path = "../sand-core" }
sand-macros = { path = "../sand-macros" }
sand-resourcepack = { path = "../sand-resourcepack", optional = true }

[features]
default = []
# HUD/resource-pack authoring (hud_bar!, hud_element!, texture! macros).
resourcepack = ["dep:sand-resourcepack"]
# Optional gameplay systems, forwarded to the implementation crate.
systems-damage = ["sand-core/systems-damage"]
systems-cooldowns = ["sand-core/systems-cooldowns"]
systems-lifecycle = ["sand-core/systems-lifecycle"]
systems-player-data = ["sand-core/systems-player-data"]
systems-movement = ["sand-core/systems-movement"]
systems-inventory = ["sand-core/systems-inventory"]
systems-entities = ["sand-core/systems-entities"]
systems-all = ["sand-core/systems-all"]
