[package]
name = "arcane_pack"
description = "Arcane Pack — a complete dogfood datapack for Sand"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ThatOneToast/sand"
homepage = "https://github.com/ThatOneToast/sand"
authors = ["Toast <ThatOneToast@proton.me>"]
rust-version = "1.96.0"
publish = false

[workspace]

[[bin]]
name = "sand_export"
path = "src/bin/sand_export.rs"
doc = false

[dependencies]
sand = { path = "../../sand" }
sand-core = { path = "../../sand-core" }
sand-macros = { path = "../../sand-macros" }
serde_json = "1"

[build-dependencies]
sand-build = { path = "../../sand-build" }
